Add file APPMasterViewController from folder FluxRSSReader Change name from comments Align 3 stories boards

--- a/FluxRSSReader/Base.lproj/Main.storyboard
+++ b/FluxRSSReader/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8fS-aE-onr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-20.266666666666666" y="-596.39999999999998"/>
+            <point key="canvasLocation" x="-261" y="-597"/>
         </scene>
         <!--Detail-->
         <scene sceneID="yUG-lL-AsK">
@@ -57,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="378.13333333333333" y="122.12"/>
+            <point key="canvasLocation" x="762" y="-597"/>
         </scene>
         <!--Master-->
         <scene sceneID="smW-Zh-WAh">
@@ -104,7 +104,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="378.13333333333333" y="-596.39999999999998"/>
+            <point key="canvasLocation" x="282" y="-597"/>
         </scene>
     </scenes>
 </document>
